objects/ssot__LoyaltyLedgerTraceability__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionType__c</fullName>
        <label>Action Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreditLoyaltyLedgerId__c</fullName>
        <label>Credit Loyalty Ledger</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DebitLoyaltyLedgerId__c</fullName>
        <label>Debit Loyalty  Ledger</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Program Currency Tier Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PointsNumber__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227456268_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyLedgerTraceability_CreditLoya_rel</label>
        <referenceTo>ssot__LoyaltyLedger__dlm</referenceTo>
        <relationshipLabel>LoyaltyLedgerTraceability_CreditLoya_rel</relationshipLabel>
        <relationshipName>rel_1729227456268_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729227457701_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyLedgerTraceability_DebitLoyal_rel</label>
        <referenceTo>ssot__LoyaltyLedger__dlm</referenceTo>
        <relationshipLabel>LoyaltyLedgerTraceability_DebitLoyal_rel</relationshipLabel>
        <relationshipName>rel_1729227457701_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>